--- a/index.html
+++ b/index.html
@@ -1,2 +1,104 @@
-test
-test2
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body>
+    <h1> This is heading 1 </h1>
+    <h2> This is heading 2 </h2>
+    <h3> This is heading 3 </h3>
+    <h4> This is heading 4 </h4>
+    <h5> This is heading 5 </h5>
+    <h6> This is heading 6 </h6>
+
+    <p> This is paragraph </p>
+    <hr>
+    <a href="https://www.google.com/"> link to www.google.com</a> <br>
+    <a href="./link.html"> link to another html </a> <br>
+    <!-- <a href="./day01/link.html"> link to another html2 </a> <br> -->
+    <a href="https://www.google.com/"><img src="https://images.creativemarket.com/0.1.0/ps/1749581/300/200/m2/fpc/wm0/fyrozhkof9q70xb697l3ucl58cizq7rlezdxnnio9zbe1lub6prq0ixrlpf4x78g-.jpg?1476190550&s=4f048bfb9afa27ac99fe47a87d1b4b0f"
+        alt="sea"></a> <br>
+    <a href="./link.html"><button> Click </button></a> <br>    
+    <hr>
+    <img src="https://images.creativemarket.com/0.1.0/ps/1749581/300/200/m2/fpc/wm0/fyrozhkof9q70xb697l3ucl58cizq7rlezdxnnio9zbe1lub6prq0ixrlpf4x78g-.jpg?1476190550&s=4f048bfb9afa27ac99fe47a87d1b4b0f"
+        alt="sea">
+    <br>
+    <button> Click </button>
+    <hr>
+    <ul>
+        <li> list 1</li>
+        <li> list 2</li>
+        <li> list 3</li>
+        <li> list 4</li>
+        <li> list 5</li>
+    </ul>
+
+    <ol>
+        <li> list 1</li>
+        <li> list 2</li>
+        <li> list 3</li>
+        <li> list 4</li>
+        <li> list 5</li>
+    </ol>
+    <hr>
+
+    <div> content </div>
+    <div>content</div>
+    <div>content</div>
+    <span> content</span> <span> content</span> <span> content</span>
+    <hr>
+
+    <table>
+        <thead>
+            <tr>
+                <th> Head of table 1 </th>
+                <th> Head of table 2 </th>
+                <th> Head of table 3 </th>
+                <th> Head of table 4 </th>
+                <td> Head of table 5 </td>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>data in table</td>
+                <td>data in table</td>
+                <td>data in table</td>
+                <td>data in table</td>
+            </tr>
+            <tr>
+                <td>data in table</td>
+                <td>data in table</td>
+                <td>data in table</td>
+                <td>data in table</td>
+            </tr>
+            <tr>
+                <td>data in table</td>
+                <td>data in table</td>
+                <td>data in table</td>
+                <td>data in table</td>
+            </tr>
+            <tr>
+                <td>data in table</td>
+                <td>data in table</td>
+                <td>data in table</td>
+                <td>data in table</td>
+            </tr>
+        </tbody>
+    </table>
+    <hr>
+
+    <form action="">
+        <input type="text"><br>
+        <input type="checkbox"><br>
+        <input type="image"><br>
+        <input type="time"><br>
+        <input type="email"><br>
+        <input type="password">
+    </form>
+</body>
+
+</html>
