Added Input Type & Text Testing

--- a/Lab.html
+++ b/Lab.html
@@ -182,7 +182,8 @@
                     Specifies the character encodings that are to be used for the form submission <br>
                     Specifies where to send the form-data when a form is submitted <br>
                     Specifies whether a form should have autocomplete on or off <br>
-                    Specifies how the form-data should be encoded when submitting it to the server (only for method="post") <br>
+                    Specifies how the form-data should be encoded when submitting it to the server (only for
+                    method="post") <br>
                     Specifies the HTTP method to use when sending form-data <br>
                     Specifies the name of a form <br>
                     Specifies that the form should not be validated when submitted <br>
@@ -234,6 +235,277 @@
             </tr>
         </tbody>
     </table>
+    <br>
+    <hr>
+
+    <!-- <=================================== Table 2 differentiation ===================================> -->
+
+    <h2 style="background-color:DodgerBlue;">2. differentiation</h2>
+    <table>
+        <thead>
+            <tr>
+                <th>Tags</th>
+                <th>Similarity</th>
+                <th>Differentiation</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>hr & br</td>
+                <td>Both are used to separate content in an HTML page</td>
+                <td>
+                    hr : Insert horizontal line breaks <br>
+                    br : Insert single line breaks
+                </td>
+            </tr>
+            <tr>
+                <td>ul & ol</td>
+                <td>To display data as a list</td>
+                <td>
+                    ul : defines an unordered (bulleted) list <br>
+                    ol : defines an ordered list. An ordered list can be numerical or alphabetical.
+                </td>
+            </tr>
+            <tr>
+                <td>select & checkbox & radio button</td>
+                <td>Mostly, they are used as a form element(one of input type) which allow user to select option from a
+                    range of options.
+                </td>
+                <td>
+                    select : display options as a drop-down list, user can select one or more options<br>
+                    checkbox : display options as a checkbox, user can select one or more options<br>
+                    radio button : display options as a radio buttons, allow the user to select one option only.
+                </td>
+            </tr>
+            <tr>
+                <td>div & span</td>
+                <td>Defines a section in a document</td>
+                <td>
+                    div : used as a container for HTML elements<br>
+                    span : is an inline container used to mark up a part of a text, or a part of a document.
+                </td>
+            </tr>
+            <tr>
+                <td>script & style</td>
+                <td>To call external extension</td>
+                <td>
+                    script : To embed a client-side script (JavaScript)<br>
+                    style : To define style information (CSS) for a document.
+                </td>
+            </tr>
+        </tbody>
+    </table>
+
+    <br>
+    <hr>
+
+    <!-- <=================================== Table 3 input type ===================================> -->
+
+    <h2 style="background-color:DodgerBlue;">3. input type</h2>
+
+    <table>
+        <thead>
+            <tr>
+                <th>Type</th>
+                <th>Description</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>button</td>
+                <td>button are rendered as simple push buttons, which can be programmed to control custom functionality
+                    anywhere on a webpage as required when assigned an event handler function (typically for the click
+                    event).
+                </td>
+            </tr>
+            <tr>
+                <td>checkbox</td>
+                <td>
+                    checkbox are rendered by default as boxes that are checked (ticked) when activated <br>
+                    A checkbox allows you to select single values for submission in a form (or not)
+                </td>
+            </tr>
+            <tr>
+                <td>color</td>
+                <td>
+                    color provide a user interface element that lets a user specify a color, <br>
+                    either by using a visual color picker interface or by entering the color into a text field in
+                    #rrggbb hexadecimal format.
+                </td>
+            </tr>
+            <tr>
+                <td>date</td>
+                <td>
+                    This type will create input fields that let the user enter a date, <br>
+                    either with a textbox that validates the input or a special date picker interface.
+                </td>
+            </tr>
+            <tr>
+                <td>datetime-local</td>
+                <td>It will create input controls that let the user easily enter both a date and a time, including the
+                    year, month, and day as well as the time in hours and minutes.</td>
+            </tr>
+            <tr>
+                <td>email</td>
+                <td>It is used to let the user enter and edit an e-mail address</td>
+            </tr>
+            <tr>
+                <td>file</td>
+                <td>
+                    file will let the user choose one or more files from their device storage. <br>
+                    Once chosen, the files can be uploaded to a server using form submission, or manipulated using
+                    JavaScript code and the File API.
+                </td>
+            </tr>
+            <tr>
+                <td>hidden</td>
+                <td>
+                    This type will let web developers include data that cannot be seen or modified by users when a form
+                    is submitted. <br>
+                    For example, the ID of the content that is currently being ordered or edited, or a unique security
+                    token. <br>
+                    Hidden inputs are completely invisible in the rendered page, and there is no way to make it visible
+                    in the page's content.
+                </td>
+            </tr>
+            <tr>
+                <td>image</td>
+                <td>
+                    It is used to create graphical submit buttons, <br>
+                    i.e. submit buttons that take the form of an image rather than text.
+                </td>
+            </tr>
+            <tr>
+                <td>month</td>
+                <td>
+                    This type will create input fields that let the user enter a month and year. <br>
+                    The value is a string whose value is in the format "YYYY-MM", where YYYY is the four-digit year and
+                    MM is the month number.
+                </td>
+            </tr>
+            <tr>
+                <td>number</td>
+                <td>This is used to let the user enter a number. They include built-in validation to reject
+                    non-numerical entries.</td>
+            </tr>
+            <tr>
+                <td>password</td>
+                <td>This will provide a way for the user to securely enter a password.</td>
+            </tr>
+            <tr>
+                <td>radio</td>
+                <td>
+                    Generally used in radio groups—collections of radio buttons describing a set of related options.
+                    <br>
+                    Only one radio button in a given group can be selected at the same time.
+                </td>
+            </tr>
+            <tr>
+                <td>range</td>
+                <td>This let the user specify a numeric value which must be no less than a given value, and no more than
+                    another given value.</td>
+            </tr>
+            <tr>
+                <td>reset</td>
+                <td>This is rendered as buttons, with a default click event handler that resets all of the inputs in the
+                    form to their initial values.</td>
+            </tr>
+            <tr>
+                <td>search</td>
+                <td>Display as text fields designed for the user to enter search queries into.</td>
+            </tr>
+            <tr>
+                <td>submit</td>
+                <td>Display as buttons. When the click event occurs (typically because the user clicked the button), the
+                    user agent attempts to submit the form to the server.</td>
+            </tr>
+            <tr>
+                <td>tel</td>
+                <td>It is used to let the user enter and edit a telephone number.</td>
+            </tr>
+            <tr>
+                <td>text</td>
+                <td>This will create basic single-line text fields.</td>
+            </tr>
+            <tr>
+                <td>time</td>
+                <td>It will create input fields designed to let the user easily enter a time (hours and minutes, and
+                    optionally seconds).</td>
+            </tr>
+            <tr>
+                <td>url</td>
+                <td>It is used to let the user enter and edit a URL.</td>
+            </tr>
+            <tr>
+                <td>week</td>
+                <td>It will create input fields allowing easy entry of a year plus the ISO 8601 week number during that
+                    year (i.e., week 1 to 52 or 53).</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
+<br>
+<hr>
+
+<!-- <=================================== Table 4 Text Testing ===================================> -->
+
+<h2 style="background-color:DodgerBlue;">4. text testing</h2>
+
+<table>
+    <thead>
+        <tr>
+            <th>Tag</th>
+            <th>Description</th>
+            <th>Example</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>strong</td>
+            <td>Tag is used to define text with strong importance. The content inside is typically displayed in bold.</td>
+            <td><strong>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit repellat non optio reiciendis voluptatem, repudiandae excepturi consectetur nihil autem suscipit! Facere, ea porro nisi unde magnam reiciendis eligendi quidem enim!</strong></td>
+        </tr>
+        <tr>
+            <td>label</td>
+            <td>To defines a label for elements</td>
+            <td><label for="This is tag label">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, explicabo! Fugiat, porro eius harum eligendi quam et, magni debitis, nemo repellendus reprehenderit alias maiores necessitatibus consectetur vitae. Accusantium, sed rem?</label></td>
+        </tr>
+        <tr>
+            <td>del</td>
+            <td>To defines text that has been deleted from a document.</td>
+            <td><del>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia quisquam consequuntur incidunt eveniet esse atque soluta eius illo harum voluptatum, accusantium tempora non maiores nam sint? Dolore assumenda numquam aliquid!</del></td>
+        </tr>
+        <tr>
+            <td>b</td>
+            <td>To specifies bold text without any extra importance.</td>
+            <td><b>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem nesciunt perspiciatis quidem eaque a officiis, voluptate aut similique dolorem sit minus id sed enim at consequatur modi vel dignissimos porro?</b></td>
+        </tr>
+        <tr>
+            <td>em</td>
+            <td>To define emphasized text. The content inside is typically displayed in italic.</td>
+            <td><em>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, iusto assumenda? Voluptatibus eos a soluta commodi, quo inventore quam quasi odit voluptates reiciendis? Eos ratione, amet ullam molestias placeat eligendi.</em></td>
+        </tr>
+        <tr>
+            <td>mark</td>
+            <td>To defines text that should be marked or highlighted.</td>
+            <td><mark>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus a ad possimus voluptatum, quae error porro delectus neque at nostrum aspernatur asperiores sed dicta nobis optio odit dolores, sit provident.</mark></td>
+        </tr>
+        <tr>
+            <td>i</td>
+            <td>To defines a part of text in an alternate voice or mood. The content inside is typically displayed in italic.</td>
+            <td><i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed ex eos quod, beatae enim laborum mollitia dolor corporis commodi cumque consequuntur repudiandae omnis illum quasi quos ab ipsum quibusdam. In!</i></td>
+        </tr>
+        <tr>
+            <td>sub</td>
+            <td>To defines subscript text. Subscript text appears half a character below the normal line, and is sometimes rendered in a smaller font. Subscript text can be used for chemical formulas, like H2O.</td>
+            <td>H<sub>2</sub>O</td>
+        </tr>
+        <tr>
+            <td>sup</td>
+            <td>To defines superscript text. Superscript text appears half a character above the normal line, and is sometimes rendered in a smaller font. Superscript text can be used for footnotes, like WWW[1].</td>
+            <td>WWW<sup>[1]</sup></td>
+        </tr>
+    </tbody>
+</table>
 
 </html>
