Shopping Mockup + Updated Fotter fpr News

--- a/News.html
+++ b/News.html
@@ -140,7 +140,8 @@
             <div class="grid-item">5</div>
         </div>
     </div>
-    <br><hr>
+    <br>
+    <hr>
 
     <h3>Sticky Navigation Bar Example</h3>
     <p>The navbar will <strong>stick</strong> to the top when you reach its scroll position.</p>
@@ -168,6 +169,9 @@
         eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus
         repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
 
+    <div class="footer">
+        <h2>Footer</h2>
+    </div>
 
     <script>
         var slideIndex = 0;
